add talk perm to org.freedesktop.PowerManagement
without this permission deezer can't prevent sleep on plasma

--- a/dev.aunetx.deezer.yml
+++ b/dev.aunetx.deezer.yml
@@ -18,6 +18,7 @@ finish-args:
   # Allow other instances to see lockfiles
   - --env=TMPDIR=/var/tmp
   # DBus permissions
+  - --talk-name=org.freedesktop.PowerManagement
   - --talk-name=org.freedesktop.Notifications
   - --talk-name=org.gnome.SettingsDaemon
   - --talk-name=org.gnome.SessionManager
