Fix silly error

--- a/dev.aunetx.deezer.yml
+++ b/dev.aunetx.deezer.yml
@@ -73,4 +73,4 @@ modules:
       - install -Dm644 dev.aunetx.deezer.appdata.xml /app/share/appdata/dev.aunetx.deezer.appdata.xml
       - install -Dm644 /app/main/resources/dev.aunetx.deezer.svg /app/share/icons/hicolor/scalable/apps/dev.aunetx.deezer.svg
       - install -Dm644 /app/main/resources/dev.aunetx.deezer.desktop /app/share/applications/dev.aunetx.deezer.desktop
-      - patch-desktop-filename /app/main/resources/resources/app.asar
+      - patch-desktop-filename /app/main/resources/app.asar
