--- a/dev.aunetx.deezer.yml
+++ b/dev.aunetx.deezer.yml
@@ -10,7 +10,7 @@ tags: [proprietary]
 finish-args:
   # Basic permissions
   - --share=ipc
-  - --socket=x11
+  - --socket=fallback-x11
   - --socket=wayland
   - --socket=pulseaudio
   - --share=network
