revert Update config

--- a/dev.aunetx.deezer.yml
+++ b/dev.aunetx.deezer.yml
@@ -10,8 +10,7 @@ tags: [proprietary]
 finish-args:
   # Basic permissions
   - --share=ipc
-  - --socket=fallback-x11
-  - --socket=wayland
+  - --socket=x11
   - --socket=pulseaudio
   - --share=network
   - --device=dri
