--- a/dev.aunetx.deezer.yml
+++ b/dev.aunetx.deezer.yml
@@ -4,6 +4,8 @@ runtime-version: '24.08'
 sdk: org.freedesktop.Sdk
 base: org.electronjs.Electron2.BaseApp
 base-version: '24.08'
+sdk-extensions:
+  - org.freedesktop.Sdk.Extension.node22
 command: run.sh
 separate-locales: false
 tags: [proprietary]
