--- a/dev.aunetx.deezer.yml
+++ b/dev.aunetx.deezer.yml
@@ -13,6 +13,7 @@ finish-args:
   # Basic permissions
   - --share=ipc
   - --socket=x11
+  - --socket=wayland
   - --socket=pulseaudio
   - --share=network
   - --device=dri
